// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterItem should render an active item 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-buy"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#2B1911"
        id="buy"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#2B1911",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        buy btc
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render an active item with inverted theme 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-buy"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#FFFCFA"
        id="buy"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#FFFCFA",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        buy btc
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render an inactive item 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-sell"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#7D675E"
        id="sell"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#7D675E",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        sell btc
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render an inactive item with inverted theme 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-sell"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#FFA171"
        id="sell"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#FFA171",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        sell btc
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render an item with notifications 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-yourTrades"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#7D675E"
        id="yourTrades"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#7D675E",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        trades
      </PeachText>
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#F56522",
            "height": 20,
            "left": "50%",
            "position": "absolute",
            "top": -8,
            "width": 20,
          },
          {
            "borderColor": "#FFF9F6",
            "borderRadius": 9999,
            "borderWidth": 2,
          },
        ]
      }
    >
      <NotificationBubble
        notifications={4}
      />
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render an item without notifications with inverted theme 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-yourTrades"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <Icon
        color="#FFA171"
        id="yourTrades"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#FFA171",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        trades
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render special item for settings 1`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-settings"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <test-file-stub
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#F56522",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        settings
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;

exports[`FooterItem should render special item for settings 2`] = `
<Memo(Pressable)
  onPress={[MockFunction]}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="footer-settings"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <test-file-stub
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
      />
      <PeachText
        style={
          [
            {
              "color": "#7D675E",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 12,
              "letterSpacing": 0.16,
              "lineHeight": 19.5,
              "textAlign": "center",
            },
          ]
        }
      >
        settings
      </PeachText>
    </View>
  </View>
</Memo(Pressable)>
`;
